<resources>
    <string name="app_name">PBSP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="data_input">Introducción de los datos</string>
    <string name="graphic">Gráfica</string>
    <string name="report">Informe</string>
    <string name="player_change">Cambiar de jugador</string>
    <string name="add_images">Añadir imágenes</string>
    <string name="back_pressed_text">Si desea salir de la aplicación pulse de nuevo sobre el botón de retorno</string>
    <string name="player_name_hint">Introduce el nombre de la jugadora o jugador</string>
    <string name="player_team_hint">Introdice el equipo del jugador o jugadora</string>
    <string name="bt_player_text">Iniciar estudio</string>
    <string name="articulate">Articular</string>
    <string name="flexibility">Flexibilidad</string>
    <string name="functional">Funcional</string>
    <string name="strong">Fuerza</string>
    <string name="player_position_hint">Introduce la posicion donde juega</string>
    <string name="left">Izquierda</string>
    <string name="rigth">Derecha</string>
    <string name="aforgoings">Antecedentes</string>
</resources>
