<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_data_introduce"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/data_input" />
        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/graphic" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/report" />
    </group>

    <item
        android:id="@+id/nav_change_player"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/player_change" />

</menu>
