<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="viewModel"
            type="com.eyubero.pbsp.ui.fragments.PlayerFragment" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_player_team"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/player_team_hint"
            android:textSize="13sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/til_player_name">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_player_team"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_player_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/player_name_hint"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@+id/til_player_team"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bt_player">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_player_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/bt_player"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:background="@color/colorPrimary"
            android:text="@string/bt_player_text"
            android:textColor="@color/withe"
            app:layout_constraintTop_toBottomOf="@+id/til_player_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</layout>