<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tl_articuate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/articulate_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/background_blue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/cell_blue"
                    android:gravity="center"
                    android:text="@string/left"
                    android:textColor="@color/blue_pbsp"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/cell_blue"
                    android:gravity="center"
                    android:text="@string/rigth"
                    android:textColor="@color/blue_pbsp"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:background="@drawable/cell_blue"
                    android:gravity="center"
                    android:text="@string/aforgoings"
                    android:textColor="@color/blue_pbsp"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/background_blue"
                    android:gravity="center"
                    android:text="Columna"
                    android:textColor="@color/withe"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_IdaColumna"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/cell_blue"
                    android:gravity="center"
                    android:hint="0"
                    android:textColor="@color/blue_pbsp"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_DchaColumna"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/cell_blue"
                    android:gravity="center"
                    android:hint="0"
                    android:textColor="@color/blue_pbsp"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5">

                    <EditText
                        android:id="@+id/et_IdaAntecedentesColumna"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:background="@drawable/cell_blue"
                        android:gravity="center"
                        android:hint="0"
                        android:textColor="@color/blue_pbsp"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_DchaAntecedentesColumna"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:background="@drawable/cell_blue"
                        android:gravity="center"
                        android:hint="0"
                        android:textColor="@color/blue_pbsp"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/background_blue"
                    android:gravity="center"
                    android:text="Pelvis"
                    android:textColor="@color/withe"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_IdaPelvis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/cell_blue"
                    android:gravity="center"
                    android:hint="0"
                    android:textColor="@color/blue_pbsp"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_DchaPelvis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/cell_blue"
                    android:gravity="center"
                    android:hint="0"
                    android:textColor="@color/blue_pbsp"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5">

                    <EditText
                        android:id="@+id/et_IdaAntecedentesPelvis"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:background="@drawable/cell_blue"
                        android:gravity="center"
                        android:hint="0"
                        android:textColor="@color/blue_pbsp"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_DchaAntecedentesPelvis"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:background="@drawable/cell_blue"
                        android:gravity="center"
                        android:hint="0"
                        android:textColor="@color/blue_pbsp"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/background_blue"
                    android:gravity="center"
                    android:text="Cadera"
                    android:textColor="@color/withe"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_IdaCadera"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/cell_blue"
                    android:gravity="center"
                    android:hint="0"
                    android:textColor="@color/blue_pbsp"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_DchaCadera"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/cell_blue"
                    android:gravity="center"
                    android:hint="0"
                    android:textColor="@color/blue_pbsp"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5">

                    <EditText
                        android:id="@+id/et_IdaAntecedentesCadera"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:background="@drawable/cell_blue"
                        android:gravity="center"
                        android:hint="0"
                        android:textColor="@color/blue_pbsp"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_DchaAntecedentesCadera"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:background="@drawable/cell_blue"
                        android:gravity="center"
                        android:hint="0"
                        android:textColor="@color/blue_pbsp"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/background_blue"
                    android:gravity="center"
                    android:text="Rodilla"
                    android:textColor="@color/withe"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_IdaRodilla"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/cell_blue"
                    android:gravity="center"
                    android:hint="0"
                    android:textColor="@color/blue_pbsp"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_DchaRodilla"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/cell_blue"
                    android:gravity="center"
                    android:hint="0"
                    android:textColor="@color/blue_pbsp"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5">

                    <EditText
                        android:id="@+id/et_IdaAntecedentesRodilla"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:background="@drawable/cell_blue"
                        android:gravity="center"
                        android:hint="0"
                        android:textColor="@color/blue_pbsp"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_DchaAntecedentesRodilla"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:background="@drawable/cell_blue"
                        android:gravity="center"
                        android:hint="0"
                        android:textColor="@color/blue_pbsp"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/background_blue"
                    android:gravity="center"
                    android:text="Tobillo/Pie"
                    android:textColor="@color/withe"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_IdaPie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/cell_blue"
                    android:gravity="center"
                    android:hint="0"
                    android:textColor="@color/blue_pbsp"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_DchaPie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/cell_blue"
                    android:gravity="center"
                    android:hint="0"
                    android:textColor="@color/blue_pbsp"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5">

                    <EditText
                        android:id="@+id/et_IdaAntecedentesPie"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:background="@drawable/cell_blue"
                        android:gravity="center"
                        android:hint="0"
                        android:textColor="@color/blue_pbsp"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_DchaAntecedentesPie"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:background="@drawable/cell_blue"
                        android:gravity="center"
                        android:hint="0"
                        android:textColor="@color/blue_pbsp"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </TableRow>
        </TableLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/articulate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:src="@drawable/ic_withe_arrow"
            android:backgroundTint="@color/green_pbsp"
            app:layout_constraintTop_toBottomOf="@+id/tl_articuate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</layout>